--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -287,7 +287,7 @@
 <!-- script for timepicker -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="cwa/allcsa.js"> </script>
+<script type="text/javascript" src="avatar-configs/cwa/allcsa.js"> </script>
 <!-- =============================================== -->
 
 <!-- script for communication with and set up of the avatar -->
