nieuwe distributie en avatar vanuit signlab

--- a/grammar.html
+++ b/grammar.html
@@ -192,7 +192,7 @@
 <!-- script for timepicker -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="cwa/allcsa.js"> </script>
+<script type="text/javascript" src="cwasa/uva2021/cwa/allcsa.js"> </script>
 
 
 <!-- =============================================== -->
