index.html allcsa.js weer werken voor av0

--- a/ns-demo/index-focus-groep.html
+++ b/ns-demo/index-focus-groep.html
@@ -104,7 +104,7 @@
               <option id="DE TREIN VERTREKT OVER EEN NOG ONBEKENDE TIJD">Wanneer? Nog geen idee.</option>
               <option id="DE TREIN STOPT NIET OP TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation schuin_stopt niet op tussengelegen stations niet_Breda, niet_Arnhem, niet_Zwolle.</option>
               <option id="Tijdsaanduiding">15:31_dubbel</option>
-              <option id="Pauzes 1">Hallo 134 de treinType 6 naar eindStation 6 van vertrekTijd 106 rijdt niet.</option>
+              <option id="Pauzes 1">Hallo 134, de treinType 6 naar eindStation 6 van vertrekTijd 106 rijdt niet.</option>
               <option id="Pauzes 2">De treinType 6 naar eindStation 6 van vertrekTijd 106 vertrekt 11 over wachtTijd 11 van spoor spoorNr.</option>
               <option id="Pauzes 3">Herhaling. De treinType 6 naar eindStation 6 van vertrekTijd 106 rijdt via een 6 andere route.</option>
               <option id="Pauzes 4">Hallo 134, de treinType 6 naar eindStation 106 stopt niet 11 op tussenStation1, tussenStation2, tussenStation3, tussenStation4.</option>
@@ -224,7 +224,7 @@
               <option id="DE TREIN VERTREKT OVER EEN NOG ONBEKENDE TIJD">Wanneer? Weet ik nog niet.</option>
               <option id="STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation hoek_stopt niet op tussengelegen stations niet_Breda, niet_Arnhem, niet_Zwolle.</option>
               <option id="Tijdsaanduiding">15:31_babyO</option>
-              <option id="Pauzes 1">Hallo 0  de treinType 0 naar eindStation 0 van vertrekTijd 0 rijdt niet.</option>
+              <option id="Pauzes 1">Hallo 0, de treinType 0 naar eindStation 0 van vertrekTijd 0 rijdt niet.</option>
               <option id="Pauzes 2">De treinType 0 naar eindStation 0 van vertrekTijd 0 vertrekt 0 over wachtTijd 0 van spoor spoorNr.</option>
               <option id="Pauzes 3">Herhaling. De treinType 0 naar eindStation 0 van vertrekTijd 0 rijdt via een 0 andere route.</option>
               <option id="Pauzes 4">Hallo 0, de treinType 0 naar eindStation 0 stopt niet 0 op tussenStation1, tussenStation2, tussenStation3, tussenStation4.</option>
@@ -344,7 +344,7 @@
             <option id="DE TREIN VERTREKT OVER EEN NOG ONBEKENDE TIJD">De tijd is nog niet duidelijk.</option>
             <option id="STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation stopt niet op niet_Arnhem, niet_Breda, niet_Zwolle.</option>
             <option id="Tijdsaanduiding">15:31_vinger</option>
-            <option id="Pauzes 1">Hallo 67 de treinType 3 naar eindStation 3 van vertrekTijd 53 rijdt niet.</option>
+            <option id="Pauzes 1">Hallo 67, de treinType 3 naar eindStation 3 van vertrekTijd 53 rijdt niet.</option>
             <option id="Pauzes 2">De treinType 3 naar eindStation 3 van vertrekTijd 53 vertrekt 5s over wachtTijd 5s van spoor spoorNr.</option>
             <option id="Pauzes 3">Herhaling. De treinType 3 naar eindStation 3 van vertrekTijd 53 rijdt via een 3 andere route.</option>
             <option id="Pauzes 4">Hallo 67, de treinType 3 naar eindStation 53 stopt niet 5s op tussenStation1, tussenStation2, tussenStation3, tussenStation4.</option>
@@ -482,7 +482,7 @@
 <!-- script for timepicker -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="avatar-configs/cwa/allcsa.js"> </script>
+<script type="text/javascript" src="avatar-configs/cwa/allcsa-focus-groep.js"> </script>
 <!-- =============================================== -->
 
 <!-- script for communication with and set up of the avatar -->
