--- a/ns-demo/index-focus-groep.html
+++ b/ns-demo/index-focus-groep.html
@@ -77,7 +77,7 @@
       <!-- =================================== AVATAR 0 COLUMN =================================== -->
       <div class="col-sm pr-2">
           <span class="CWASAAvatar av0" id="avatar"></span>
-          <input class="av0 subtitlesRep col-mb-5" id="repetitionBar_av0" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
+          <input class="av0 subtitlesRep0 col-mb-5" id="repetitionBar_av0" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
           <div class="av0 subtitlesLong col-mb-5" id="outputLong" style="display: none"></div>
           <input class="av0 txtGloss subtitles0 col-mb-5" id="outputGloss" value="" type="text" readonly="readonly" style="display: block"></input>
           <br>
@@ -108,7 +108,7 @@
               <option id="Pauzes 1">Hallo 134, de treinType 6 naar eindStation 6 van vertrekTijd 106 rijdt niet.</option>
               <option id="Pauzes 2">De treinType 6 naar eindStation 6 van vertrekTijd 106 vertrekt 11 over wachtTijd 11 van spoor spoorNr.</option>
               <option id="Pauzes 3">Herhaling. De treinType 6 naar eindStation 6 van vertrekTijd 106 rijdt via een 6 andere route.</option>
-              <option id="Pauzes 4">Hallo 134, de treinType 6 naar eindStation 106 stopt niet 11 op tussenStation1, tussenStation2, tussenStation3, tussenStation4.</option>
+              <option id="Pauzes 4">Hallo 134, de treinType 6 naar eindStation 106 stopt niet 11 op niet_Breda, niet_Arnhem, niet_Zwolle.</option>
 
               <option>Hallo, de treinType naar eindStation van vertrekTijd rijdt niet.</option>
               <option>De treinType naar tussenStation1, tussenStation2, tussenStation3, tussenStation4 en eindStation van vertrekTijd vertrekt over wachtTijd van spoor spoorNr.</option>
@@ -198,7 +198,7 @@
        <!-- =================================== AVATAR 1 COLUMN =================================== -->
         <div class="col-sm pr-2">
             <span class="CWASAAvatar av1" id="avatar"></span>
-            <input class="av1 subtitlesRep col-mb-5" id="repetitionBar_av1" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
+            <input class="av1 subtitlesRep0 col-mb-5" id="repetitionBar_av1" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
             <input class="av1 txtGloss subtitles0 col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
             <br>
             <input type="button" class="btn btn-primary" id="play_av1" value="Play" onclick='makePlayNonClickable(1); getSentenceArray(document.getElementById("currSentence_av1").innerText, 1);'/>
@@ -228,7 +228,7 @@
               <option id="Pauzes 1">Hallo 0, de treinType 0 naar eindStation 0 van vertrekTijd 0 rijdt niet.</option>
               <option id="Pauzes 2">De treinType 0 naar eindStation 0 van vertrekTijd 0 vertrekt 0 over wachtTijd 0 van spoor spoorNr.</option>
               <option id="Pauzes 3">Herhaling. De treinType 0 naar eindStation 0 van vertrekTijd 0 rijdt via een 0 andere route.</option>
-              <option id="Pauzes 4">Hallo 0, de treinType 0 naar eindStation 0 stopt niet 0 op tussenStation1, tussenStation2, tussenStation3, tussenStation4.</option>
+              <option id="Pauzes 4">Hallo 0, de treinType 0 naar eindStation 0 stopt niet 0 op niet_Breda, niet_Arnhem, niet_Zwolle.</option>
          
               <option>Hallo, de treinType naar eindStation van vertrekTijd rijdt niet.</option>
               <option>De treinType naar tussenStation1, tussenStation2, tussenStation3, tussenStation4 en eindStation van vertrekTijd vertrekt over wachtTijd van spoor spoorNr.</option>
@@ -318,7 +318,7 @@
       <!-- =================================== AVATAR 2 COLUMN =================================== -->
       <div class="col-sm">
         <span class="CWASAAvatar av2" id="avatar"></span>
-        <input class="av2 subtitlesRep col-mb-5" id="repetitionBar_av2" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
+        <input class="av2 subtitlesRep0 col-mb-5" id="repetitionBar_av2" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
         <div class="av0 subtitlesLong col-mb-5" id="outputLong_nocurrent" style="display: none"></div>
         <input class="av2 txtGloss subtitles0 col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
         <br>
@@ -344,17 +344,17 @@
             <option id="Indexen">Hallo, IA2 treinType IA2 naar eindStation IA2 vertrekt van IB2 spoor_s 5_s IB2_.</option>
             <option id="DE TREIN VERTREKT OVER ENKELE MINUTEN">De treinType gaat bijna weg van spoor spoorNr.</option>
             <option id="DE TREIN VERTREKT OVER EEN NOG ONBEKENDE TIJD">De tijd is nog niet duidelijk.</option>
-            <option id="STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation stopt niet op niet_Arnhem, niet_Breda, niet_Zwolle.</option>
+            <option id="STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation stopt niet op niet_Breda, niet_Arnhem, niet_Zwolle.</option>
             <option id="Tijdsaanduiding">15:31_vinger</option>
             <option id="Pauzes 1a">Hallo 67, de treinType 3 naar eindStation 3 van vertrekTijd 53 rijdt niet.</option>
-            <option id="Pauzes 2a">De treinType 3 naar eindStation 3 van vertrekTijd 53 vertrekt 5s over wachtTijd 5s van spoor spoorNr.</option>
+            <option id="Pauzes 2a">De treinType 3 naar eindStation 3 van vertrekTijd 53 vertrekt 5s over wachtTijd s van spoor spoorNr.</option>
             <option id="Pauzes 3a">Herhaling. De treinType 3 naar eindStation 3 van vertrekTijd 53 rijdt via een 3 andere route.</option>
-            <option id="Pauzes 4a">Hallo 67, de treinType 3 naar eindStation 53 stopt niet 5s op tussenStation1, tussenStation2, tussenStation3, tussenStation4.</option>
+            <option id="Pauzes 4a">Hallo 67, de treinType 3 naar eindStation 53 stopt niet 5s op niet_Breda, niet_Arnhem, niet_Zwolle.</option>
             
-            <option id="Pauzes 1b">Hallo 268, de treinType 12 naar eindStation 12 van vertrekTijd 212 rijdt niet.</option>
-            <option id="Pauzes 2b">De treinType 12 naar eindStation 12 van vertrekTijd 212 vertrekt 22 over wachtTijd 22 van spoor spoorNr.</option>
-            <option id="Pauzes 3b">Herhaling. De treinType 12 naar eindStation 12 van vertrekTijd 212 rijdt via een 12 andere route.</option>
-            <option id="Pauzes 4b">Hallo 268, de treinType 12 naar eindStation 212 stopt niet 22 op tussenStation1, tussenStation2, tussenStation3, tussenStation4.</option>
+            <option id="Pauzes 1b">Hallo 201, de treinType 9 naar eindStation 9 van vertrekTijd 159 rijdt niet.</option>
+            <option id="Pauzes 2b">De treinType 9 naar eindStation 9 van vertrekTijd 159 vertrekt 16s over wachtTijd 16s van spoor spoorNr.</option>
+            <option id="Pauzes 3b">Herhaling. De treinType 9 naar eindStation 9 van vertrekTijd 159 rijdt via een 9 andere route.</option>
+            <option id="Pauzes 4b">Hallo 201, de treinType 9 naar eindStation 159 stopt niet 16s op niet_Breda, niet_Arnhem, niet_Zwolle.</option>
 
             <option>Hallo, de treinType naar eindStation van vertrekTijd rijdt niet.</option>
             <option>De treinType naar tussenStation1, tussenStation2, tussenStation3, tussenStation4 en eindStation van vertrekTijd vertrekt over wachtTijd van spoor spoorNr.</option>
