--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -81,11 +81,11 @@
                 <!-- CWA signing avatar panel 0 -->
                 <!--================================================================-->
                 <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-                  
+                <div class="smallAvatarWindow">
                 <span class="CWASAAvatar av0" id="avatar"></span>
                     <!--<input class="av0 subtitles col-mb-5" id="outputSentence" value="" type="text" readonly="readonly"></input>-->
-                    <input class="av0 subtitlesRep0 col-mb-5" id="repetitionBar" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
-                    <input class="av0 txtGloss subtitles0 col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
+                    <input class="av0 subtitlesRep col-mb-5" id="repetitionBar" value="HERHALING" type="text" readonly="readonly" style="background-color: tomato; display: none;"></input>
+                    <input class="av0 txtGloss subtitles col-mb-5" id="outputGloss" value="" type="text" readonly="readonly"></input>
                     <br>
                     <input type="button" class="btn btn-primary" id="play" value="Play" onclick='makePlayNonClickable(); getSentenceArray(document.getElementById("currSentence").innerText, "alertMainTran");'/>
                     <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML(); makePlayClickable();' />
@@ -103,6 +103,7 @@
                     <input id="outputGloss" class="txtGloss av0" value="-" type="text">
                     <br> -->
                 <!--================================================================-->
+              </div>
       </div>
 
             <!-- Column for input -->
