EN versie uit index.html en makevarboxesinvisble fout opgelost

--- a/ns-demo/index-focus-groep.html
+++ b/ns-demo/index-focus-groep.html
@@ -223,7 +223,7 @@
               <option id="Indexen">Hallo, IA1 treinType naar eindStation IA1 vertrekt van IB1 spoor spoorNr.</option>
               <option id="DE TREIN VERTREKT OVER ENKELE MINUTEN">De treinType vertrekt binnen een paar minuten van spoor spoorNr.</option>
               <option id="DE TREIN VERTREKT OVER EEN NOG ONBEKENDE TIJD">Wanneer? Weet ik nog niet.</option>
-              <option id="STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation hoek_stopt niet op tussengelegen stations niet_Breda, niet_Arnhem, niet_Zwolle.</option>
+              <option id="NIET STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation hoek_stopt niet op tussengelegen stations niet_Breda, niet_Arnhem, niet_Zwolle.</option>
               <option id="Tijdsaanduiding">15:31_babyO</option>
               <option id="Pauzes 1">Hallo 0, de treinType 0 naar eindStation 0 van vertrekTijd 0 rijdt niet.</option>
               <option id="Pauzes 2">De treinType 0 naar eindStation 0 van vertrekTijd 0 vertrekt 0 over wachtTijd 0 van spoor spoorNr.</option>
@@ -344,7 +344,7 @@
             <option id="Indexen">Hallo, IA2 treinType IA2 naar eindStation IA2 vertrekt van IB2 spoor_s 5_s IB2_.</option>
             <option id="DE TREIN VERTREKT OVER ENKELE MINUTEN">De treinType gaat bijna weg van spoor spoorNr.</option>
             <option id="DE TREIN VERTREKT OVER EEN NOG ONBEKENDE TIJD">De tijd is nog niet duidelijk.</option>
-            <option id="STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation stopt niet op niet_Breda, niet_Arnhem, niet_Zwolle.</option>
+            <option id="NIET STOPPEN TUSSENGELEGEN STATIONS">Hallo, de treinType naar eindStation stopt niet op niet_Breda, niet_Arnhem, niet_Zwolle.</option>
             <option id="Tijdsaanduiding">15:31_vinger</option>
             <option id="Pauzes 1a">Hallo 67, de treinType 3 naar eindStation 3 van vertrekTijd 53 rijdt niet.</option>
             <option id="Pauzes 2a">De treinType 3 naar eindStation 3 van vertrekTijd 53 vertrekt 5s over wachtTijd s van spoor spoorNr.</option>
@@ -495,7 +495,7 @@
 <!-- script for communication with and set up of the avatar -->
 <script language="javascript" type="text/javascript" src="js/avatar.js"></script>
 <!-- script for shared functions across all pages -->
-<script language="javascript" type="text/javascript" src="js/general.js"></script>
+<script language="javascript" type="text/javascript" src="js/general-focus-groep.js"></script>
 <!-- script specific to main page -->
 <script language="javascript" type="text/javascript" src="js/index-focus-groep.js"></script>
 <!-- script specific to the sentences -->
