--- a/ns-demo/index.html
+++ b/ns-demo/index.html
@@ -117,7 +117,7 @@
             <label id="selectExplain" for="inputLanguageForm" class="col-sm col-form-label"></label>
               <div class="col-sm">
                 <select id="inputLanguageForm" class="form-select" onchange="changeLanguage(this.value);" style="margin-bottom: 0px; max-width: 200px;">
-                  <option value="English">English</option>
+                  <!--<option value="English">English</option>-->
                   <option selected value="Nederlands">Nederlands</option>
                 </select>
               </div>
