--- a/playground.html
+++ b/playground.html
@@ -365,17 +365,20 @@
           </div>
 
 
-          <div class="btn-group dropend">
-            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropright
-            </button>
-            <ul class="dropdown-menu">
-              <li><button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                Grammatical marker
-              </button></li>
-              
-            </ul>
-          </div>
+          <!-- <div class="btn-group dropright">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropright</button>
+              <div class="dropdown-menu">
+                <!-- Dropdown menu links -->
+                <div class="btn-group dropright">
+                  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Grammatical markers</button>
+                    <div class="dropdown-menu">
+                      questionmarkEyebrowsRaised
+                    </div>
+                </div>
+              </div>
+          </div> -->
 
         </div>
     </div>
