--- a/people.html
+++ b/people.html
@@ -94,10 +94,10 @@
                     </h5>
                     <p class="text-black-50 mb-3">
                       <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Language Learnability)<br>
+                      <a href="https://www.uva.nl/profiel/o/o/m.oomen2/m.oomen2.html" target="_blank">Marloes Oomen</a> (Postdoc)<br> 
                       <a href="https://www.uva.nl/profiel/s/c/m.c.scheffener/m.c.scheffener.html" target="_blank"> Marijke Scheffener</a> (Lecturer NGT and Research Assistant)<br>
                       <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
                       <a href="https://www.uva.nl/profiel/s/u/b.sumer/b.sumer.html" target="_blank">Beyza Sümer</a> (Assistant Professor Sign Linguistics)<br>
-                      <!-- Marloes Oomen (Postdoc)<br> -->
                     </p>
                     <h5>
                       PhD students and junior researchers
