--- a/playground.html
+++ b/playground.html
@@ -77,6 +77,7 @@
       <!-- Column for make SiGML button -->
       <div class="col-12 col-md-6">            
         <input type="button" class="btn btn-primary" value="Make SiGML" onclick="callPython(document.getElementById('mySiGML').value, 'alertPlayground');" />
+        <input type="button" class="btn btn-primary" value="Test SiGML" onclick="testCallPython(document.getElementById('mySiGML').value, 'alertPlayground');" />
       </div>
       
       <!-- Column for nonmanuals input -->
@@ -384,11 +385,10 @@
         placeholder="The generated SiGML code will appear here" onkeydown="if(event.keyCode == 13){event.preventDefault();playText(document.getElementById('output').value);}"></textarea>
       </div>
       <!-- 
-     Tooltip met uitleg playground gebruik
      Zoals op publications drop-down ipv tooltip: Korte instructie hoe de "sigml player werkt"
      -->
 
-     <!-- Lege kolom voor ruimte tussen sigml en avatar -->
+     <!-- Empty column for space between sigml en avatar -->
       <div class="col-12 col-md-1"></div>
 
       <!-- Column for avatar -->
