stop knop heeft nu ook een id

--- a/playground.html
+++ b/playground.html
@@ -457,11 +457,11 @@
         <!-- div for the buttons to control the avatar -->
         <div>
           <input type="button" class="btn btn-primary" id="play" value="Play" onclick="playSiGML();"/>
-          <input type="button" class="btn btn-primary" value="Stop" onclick='stop()' />
+          <input type="button" class="btn btn-primary" id="stop" value="Stop" onclick='stop()' />
           <input type="button" class="bttnSuspend av0 btn btn-primary" id="pause" value="Pause" onclick='pause()'/>
           <input type="button" class="bttnResume av0 btn btn-primary" id="resume" value="Resume" onclick='resume()'/>
-          <!-- <input type="button" class="bttnPrevF av0 btn btn-primary" value="Frame -1"/>
-          <input type="button" class="bttnNextF av0 btn btn-primary" value="Frame +1"/> -->
+          <input type="button" class="bttnPrevF av0 btn btn-primary" value="Frame -1"/>
+          <input type="button" class="bttnNextF av0 btn btn-primary" value="Frame +1"/>
           <br>
           <br>
           <label id="speedLabel" for="speedAdj" style="display: inline-block;">Adjust speed: </label>
